Added name to container
Signed-off-by: Arnau Mora Gras <arnyminerz@proton.me>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: upv-contacts
     ports:
       - "8080:8080"
     volumes:
